tests/tests/errors/30495-1.vb
'#compiler-message:30495-1.vb(8:24) : error BC30495: Exponent is not valid.
'#exit-code:1

Module Test

    Public Sub Main()

        Dim literal2 = .123E+
        
    End Sub
    
End Module